--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "mean-app:build"
+            "browserTarget": "mean-app:build",
+            "disableHostCheck": true
           },
           "configurations": {
             "production": {
