--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hammerjs": "^2.0.8",
     "mongoose": "^5.6.7",
     "rxjs": "~6.4.0",
+    "save-dev": "^2.0.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
